updates with copy, paste key assignments

--- a/.tmux.config
+++ b/.tmux.config
@@ -1,5 +1,7 @@
 bind-key -T prefix q copy-mode
 bind-key -T prefix a paste-buffer
+bind-key -T prefix C-c copy-mode
+bind-key -T prefix C-v paste-buffer
 bind-key -T prefix [ display-panes
 bind-key -T prefix w choose-window
 
